Apply CSS clip to foreground and background clip rects.

Also adjusted the tests to exercise both SPInvalidaiton and non-
SPInvalidation code paths.

BUG=703059
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2781693002
Cr-Commit-Position: refs/heads/master@{#459907}

Former-commit-id: 5f9c4837f93b8c54dcc4c9f68d1a93e09a6e1e96